--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <body>
         <header>
             <nav>
-                Link1 Link2 Link3
+                <a href="blog">Blog</a>
+                <a href="exercises">Exercises</a>
+                <a href="projects">Projects</a>
             </nav>
         </header>
 
