created blog A response

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <p>This is my first cool website that I can update in real time</p>
 
-        <footer>A Mark Zuckerberg Production</footer>
+        <footer>A Gary Isufi Production</footer>
     </body>
 
 </html>
