--- a/index.html
+++ b/index.html
@@ -6,12 +6,19 @@
 
     <body>
         <header>
+            <h1>Gary's Homepage</h1>
             <nav>
                 <a href="blog">Blog</a>
+                <br>
                 <a href="exercises">Exercises</a>
+                <br>
                 <a href="projects">Projects</a>
+                <hr>
+                <h3>Playground</h3>
+                <a href="playground/div.html">div</a>
             </nav>
         </header>
+        <hr>
 
         <p>This is my first cool website that I can update in real time</p>
 
