--- a/exercises/index.html
+++ b/exercises/index.html
@@ -4,10 +4,14 @@
     <title>Exercises</title>
 </head>
 <body>
-    <h1>Exercises</h1>
+    <header>
+        <h1>Exercises</h1>
+    </header>
+    <nav>
+        <a href="ex-1">EX1</a>
+    </nav>
     <hr>
 
-    <h3>Exercise 1</h3>
-    <h4>01/24/2021</h4>
+    <a href="../index.html">Go back</a>
 </body>
 </html>
