--- a/playground/div.html
+++ b/playground/div.html
@@ -15,7 +15,7 @@
 
             <div class="sub-container">
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio non, doloribus incidunt repudiandae inventore perspiciatis dolores voluptate repellat molestiae illo aspernatur? Numquam officia nemo suscipit ea nostrum nihil est temporibus.
+                    <span style="background-color: yellow;">Lorem ipsum dolor sit</span> amet consectetur adipisicing elit. Distinctio non, doloribus incidunt repudiandae inventore perspiciatis dolores voluptate repellat molestiae illo aspernatur? Numquam officia nemo suscipit ea nostrum nihil est temporibus.
                 </p>
             </div> 
         </div>
