--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html>
     <head>
         <title>Cool Workshop 1</title>
+        <link rel="stylesheet" href="style.css">
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Fraunces:ital,wght@0,300;0,400;0,500;0,900;1,600;1,700&display=swap');
+        </style>
     </head>
 
-    <body>
+    <body style="background-color: black; color: white;">
         <header>
             <h1>Gary's Homepage</h1>
             <nav>
@@ -17,12 +21,59 @@
                 <h3>Playground</h3>
                 <a href="playground/div.html">div</a>
             </nav>
+            <h1 class="unique-class">This is styled too</h1>
         </header>
         <hr>
 
-        <p>This is my first cool website that I can update in real time</p>
+        <p class="unique-class red-text">Here I'm using the same class that I was using for my h1, but for a paragraph</p>
 
-        <footer>A Gary Isufi Production</footer>
+        <p>Here I am using <b>bold</b>, <i>italic</i>, and <u>underscored</u> using the HTML tags.</p>
+
+        <p>Here I am using <span style="font-weight: bold;">bold</span>, <span style="font-style: italic;">italic</span>, and <span style="text-decoration: underline;">underscored</span> using the HTML tags.</p>
+
+        <ul data-visibilty="logged-in">
+            <li>Banana</li>
+            <li>Apple</li>
+            <li>Melon</li>
+        </ul>
+
+        <ol data-visibilty="logged-out">
+            <li style="color: #ffff00; text-shadow: 0 0 5px yellow;">Banana</li>
+            <li style="color: teal;">Apple</li>
+            <li style="color: coral; text-transform: uppercase;">Melon</li>
+            <ol>
+                <li>Watermelon</li>
+                <li>Honeymelon</li>
+                <li>Strangemelon</li>
+            </ol>
+            <li>Oranges</li>
+        </ol>
+
+        <!-- div*3>ol>li*3
+        <div>
+            <ol>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ol>
+        </div>
+        <div>
+            <ol>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ol>
+        </div>
+        <div>
+            <ol>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ol>
+        </div>
+        -->
+
+        <footer>A <b>Gary Isufi</b> Production</footer>
     </body>
 
 </html>
