added blog entry b

--- a/exercises/ex-1/index.html
+++ b/exercises/ex-1/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Story Man</title>
+        <link rel="stylesheet" href="../../style.css">
     </head>
     <body>
         <header>
