--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Cool Workshop 1</title>
+        <title>Gary's Homepage</title>
         <link rel="stylesheet" href="style.css">
+
+        <!--
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Fraunces:ital,wght@0,300;0,400;0,500;0,900;1,600;1,700&display=swap');
         </style>
+        -->
     </head>
 
-    <body style="background-color: black; color: white;">
+    <body>
         <header>
             <h1>Gary's Homepage</h1>
             <nav>
@@ -17,13 +20,16 @@
                 <a href="exercises">Exercises</a>
                 <br>
                 <a href="projects">Projects</a>
+                <p></p>
                 <hr>
                 <h3>Playground</h3>
                 <a href="playground/div.html">div</a>
+                <p></p>
             </nav>
-            <h1 class="unique-class">This is styled too</h1>
         </header>
         <hr>
+
+        <h1 class="unique-class">This is styled too</h1>
 
         <p class="unique-class red-text">Here I'm using the same class that I was using for my h1, but for a paragraph</p>
 
