--- a/exercises/ex-1/index.html
+++ b/exercises/ex-1/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Story Man</title>
+        <title>Exercise 1</title>
         <link rel="stylesheet" href="../../style.css">
     </head>
     <body>
         <header>
-            <h1>Story Man</h1>
+            <h1>Exercise 1</h1>
         </header>
         <hr>
 
