--- a/exercises/ex-1/index.html
+++ b/exercises/ex-1/index.html
@@ -10,6 +10,10 @@
         </header>
         <hr>
 
+        <h2>It's Pizza Time!</h2>
+        <p>Enter the <a class="story-link" href="pizzaShop.html">story</a>.</p>
+        
+        <hr>
         <a href="../index.html">Go back</a>
     </body>
 </html>
