fix to the story

--- a/exercises/ex-1/mission-spidey-failed.html
+++ b/exercises/ex-1/mission-spidey-failed.html
@@ -10,7 +10,7 @@
 
         <p class="story-narative">You are swinging through the street until something occurs out of nowhere...</p>
 
-        <p class="story-narative">You just got hit in the face with one of Doc Ock's arms, OH NOOOOO!<br>You got hit sooo hard you cannot fight Doc Ock nor make it to the car being chased by the cops in time!</p>
+        <p class="story-narative">You just got hit in the face by Mr. Ditkovich, OH NOOOOO!<br>You forgot to pay rent so Mr. Ditkovich knocked you out!<br>You got hit sooo hard you cannot fight back nor make it to the car being chased by the cops in time!</p>
 
         <p class="story-narative">You decide it may be of your best interest to hop back onto your motorcycle and deliver the <a class="story-link" href="mission-pizza.html">pizzas</a> so that you can keep your job after all.</p>
 
