--- a/gary/contact/index.html
+++ b/gary/contact/index.html
@@ -14,13 +14,13 @@
                         <ul><li><a href="../me">ME</a></li></ul>
                         <ul><li><a href="../projects">PROJECTS</a></li></ul>
                         <ul><li><a href="../experiences">EXPERIENCES</a></li></ul>
-                        <ul><li><a href="../art" style="color: orange;">ART</a></li></ul>
-                        <ul><li><a href="../contact">CONTACT</a></li></ul>
+                        <ul><li><a href="../art">ART</a></li></ul>
+                        <ul><li><a href="../contact" style="color: orange;">CONTACT</a></li></ul>
                     </nav>
                 </div>
 
                 <div class="content">
-                    <h1>ART</h1>
+                    <h1>Coming soon...</h1>
                 </div>
             </div>
         </div>
