--- a/gary/me/index.html
+++ b/gary/me/index.html
@@ -11,16 +11,16 @@
             <div class="container">
                 <div class="topHeader">
                     <nav class="headerNav">
-                        <ul><li><a href="../me">ME</a></li></ul>
+                        <ul><li><a href="../me" style="color: orange;">ME</a></li></ul>
                         <ul><li><a href="../projects">PROJECTS</a></li></ul>
                         <ul><li><a href="../experiences">EXPERIENCES</a></li></ul>
-                        <ul><li><a href="../art" style="color: orange;">ART</a></li></ul>
+                        <ul><li><a href="../art">ART</a></li></ul>
                         <ul><li><a href="../contact">CONTACT</a></li></ul>
                     </nav>
                 </div>
 
                 <div class="content">
-                    <h1>ART</h1>
+                    <h1>Coming soon...</h1>
                 </div>
             </div>
         </div>
