updates to art page

--- a/gary/me/index.html
+++ b/gary/me/index.html
@@ -9,6 +9,12 @@
     <body class="mainBody">
         <div class="wrapper">
             <div class="container">
+                <a href="../main.html" style="text-decoration: none;">
+                    <div class="homeHeader">
+                        <p>HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME</p>
+                    </div>
+                </a>
+                
                 <div class="topHeader">
                     <nav class="headerNav">
                         <ul><li><a href="../me" style="color: orange;">ME</a></li></ul>
