--- a/gary/art/index.html
+++ b/gary/art/index.html
@@ -9,6 +9,12 @@
     <body class="mainBody">
         <div class="wrapper">
             <div class="container">
+                <a href="../main.html" style="text-decoration: none;">
+                    <div class="homeHeader">
+                        <p>HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME</p>
+                    </div>
+                </a>
+
                 <div class="topHeader">
                     <nav class="headerNav">
                         <ul><li><a href="../me">ME</a></li></ul>
@@ -20,7 +26,24 @@
                 </div>
 
                 <div class="content">
-                    <h1>ART</h1>
+                    <h1 class="centerRow">Art 3001</h1>
+                    <h1 class="centerRow">Internet Art</h1>
+
+                    <br>
+
+                    <div class="artCategories">
+                        <button class="catButton catButton1"><h2>- BLOG -</h2></button>
+                        <br>
+                        <button class="catButton catButton2"><h2>- EXERCISES -</h2></button>
+                        <br>
+                        <button class="catButton catButton3"><h2>- PROJECTS -</h2></button>
+                        <br>
+                        <button class="catButton catButton4"><h2>- PLAYGROUND -</h2></button>
+                    </div>
+
+                    <br>
+
+                    <h2 class="centerRow">a Gary Isufi production</h2>
                 </div>
             </div>
         </div>
