--- a/gary/main.html
+++ b/gary/main.html
@@ -9,10 +9,12 @@
     <body class="mainBody">
         <div class="wrapper">
             <div class="container">
-                <div class="homeHeader">
-                    <p>HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME</p>
-                </div>
-
+                <a href="main.html" style="text-decoration: none;">
+                    <div class="homeHeader">
+                        <p>HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME</p>
+                    </div>
+                </a>
+                
                 <div class="topHeader">
                     <nav class="headerNav">
                         <ul><li><a href="me">ME</a></li></ul>
