finished new blog pages

--- a/gary/art/index.html
+++ b/gary/art/index.html
@@ -32,7 +32,7 @@
                     <br>
 
                     <div class="artCategories">
-                        <button class="catButton catButton1"><h2>- BLOG -</h2></button>
+                        <button class="catButton catButton1" onclick="window.location.href='blog'"><h2>- BLOG -</h2></button>
                         <br>
                         <button class="catButton catButton2"><h2>- EXERCISES -</h2></button>
                         <br>
