finished exercise pages and home scrolling thing

--- a/gary/art/exercises/index.html
+++ b/gary/art/exercises/index.html
@@ -31,28 +31,24 @@
                 </div>
 
                 <div class="content">
-                    <h1 class="centerRow">Blogs</h1>
+                    <h1 class="centerRow">Exercises</h1>
                     <nav>
-                        <button class="blogButton" onclick="window.location.href='entries/blog-a.html'"><h2>A</h2></button>
-                        <button class="blogButton" onclick="window.location.href='entries/blog-b.html'"><h2>B</h2></button>
-                        <button class="blogButton" onclick="window.location.href='entries/blog-c.html'"><h2>C</h2></button>
-                        <button class="blogButton" onclick="window.location.href='entries/blog-d.html'"><h2>D</h2></button>
-                        <button class="blogButton" onclick="window.location.href='entries/blog-e.html'"><h2>E</h2></button>
-                        <button class="blogButton" onclick="window.location.href='entries/blog-f.html'"><h2>F</h2></button>
+                        <button class="exerButton" onclick="window.location.href='ex-0'"><h2>0</h2></button>
+                        <button class="exerButton" onclick="window.location.href='ex-1'"><h2>1</h2></button>
+                        <button class="exerButton" onclick="window.location.href='ex-2'"><h2>2</h2></button>
+                        <button class="exerButton" onclick="window.location.href='ex-3'"><h2>3</h2></button>
                     </nav>
 
                     <br>
 
-                    <div class="blogDetails">
-                        <p class="centerRow">01/21/2021</p>
-                        <p class="centerRow">"My first blog entry"</p>
-                        <span class="centerRow"><img src="img/tobey.jpeg" alt="Emo Parker"></span>
+                    <div class="exerDetails">
+                        <span class="centerRow"><img src="img/tobey-weird-face.jpg" alt="Weird Parker" style="height: 300px; margin-top: 40px;"></span>
                     </div>
 
                     <br>
 
                     <div class="backAndForth">
-                        <button class="blogButton" onclick="window.location.href='entries/blog-a.html'">></button>
+                        <button class="blogButton" onclick="window.location.href='ex-0'">></button>
                     </div>
                 </div>
             </div>
