--- a/gary/art/index.html
+++ b/gary/art/index.html
@@ -10,8 +10,14 @@
         <div class="wrapper">
             <div class="container">
                 <a href="../main.html" style="text-decoration: none;">
-                    <div class="homeHeader">
-                        <p>HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME</p>
+                    <div class="marquee">
+                        <div class="marquee--inner">
+                            <div class="homeHeaderWrap">
+                                <div class="homeHeader">
+                                    <span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </a>
 
@@ -34,7 +40,7 @@
                     <div class="artCategories">
                         <button class="catButton catButton1" onclick="window.location.href='blog'"><h2>- BLOG -</h2></button>
                         <br>
-                        <button class="catButton catButton2"><h2>- EXERCISES -</h2></button>
+                        <button class="catButton catButton2" onclick="window.location.href='exercises'"><h2>- EXERCISES -</h2></button>
                         <br>
                         <button class="catButton catButton3"><h2>- PROJECTS -</h2></button>
                         <br>
