--- a/gary/contact/index.html
+++ b/gary/contact/index.html
@@ -10,8 +10,14 @@
         <div class="wrapper">
             <div class="container">
                 <a href="../main.html" style="text-decoration: none;">
-                    <div class="homeHeader">
-                        <p>HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME</p>
+                    <div class="marquee">
+                        <div class="marquee--inner">
+                            <div class="homeHeaderWrap">
+                                <div class="homeHeader">
+                                    <span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </a>
                 
