--- a/gary/main.html
+++ b/gary/main.html
@@ -9,12 +9,24 @@
     <body class="mainBody">
         <div class="wrapper">
             <div class="container">
-                <a href="main.html" style="text-decoration: none;">
+                <!-- <a href="main.html" style="text-decoration: none;">
                     <div class="homeHeader">
                         <p>HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME&emsp;&emsp;&emsp;HOME</p>
                     </div>
+                </a> -->
+
+                <a href="main.html" style="text-decoration: none;">
+                    <div class="marquee">
+                        <div class="marquee--inner">
+                            <div class="homeHeaderWrap">
+                                <div class="homeHeader">
+                                    <span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span><span>HOME</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </a>
-                
+
                 <div class="topHeader">
                     <nav class="headerNav">
                         <ul><li><a href="me">ME</a></li></ul>
