finished rest of art categories

--- a/gary/art/exercises/index.html
+++ b/gary/art/exercises/index.html
@@ -48,7 +48,7 @@
                     <br>
 
                     <div class="backAndForth">
-                        <button class="blogButton" onclick="window.location.href='ex-0'">></button>
+                        <button class="exerButton" onclick="window.location.href='ex-0'">></button>
                     </div>
                 </div>
             </div>
