--- a/me/index.html
+++ b/me/index.html
@@ -32,7 +32,7 @@
                 </div>
 
                 <div class="content">
-                    <h1>Coming soon...</h1>
+                    <h1 class="centerRow">- - - Coming soon - - -</h1>
                 </div>
             </div>
         </div>
