--- a/art/exercises/ex-4/index.html
+++ b/art/exercises/ex-4/index.html
@@ -36,26 +36,26 @@
                         <button class="exerButton" onclick="window.location.href='../ex-0'"><h2>0</h2></button>
                         <button class="exerButton" onclick="window.location.href='../ex-1'"><h2>1</h2></button>
                         <button class="exerButton" onclick="window.location.href='../ex-2'"><h2>2</h2></button>
-                        <button class="exerButton selectedExer" onclick="window.location.href='../ex-3'"><h2>3</h2></button>
-                        <button class="exerButton" onclick="window.location.href='../ex-4'"><h2>4</h2></button>
+                        <button class="exerButton" onclick="window.location.href='../ex-3'"><h2>3</h2></button>
+                        <button class="exerButton selectedExer" onclick="window.location.href='../ex-4'"><h2>4</h2></button>
                     </nav>
 
                     <br>
 
                     <div class="exerDetails">
-                        <h2 class="centerRow">Exercise 3</h2>
-                        <h2 class="centerRow">Project 1 Proposal & Design</h2>
+                        <h2 class="centerRow">Exercise 4</h2>
+                        <h2 class="centerRow">Community Contact</h2>
 
                         <br>
 
-                        <p>In this exercise, I designed a mockup of my new website by taking inspiration from the course's web crawl. I ended up re-designing this mockup to establish the design of this current website because I believed there was room for improvement.</p>
+                        <p>Click <a class="story-link" href="../../../funko/funko-new.html">here</a> to access Funko community page!</p>
                     </div>
 
                     <br>
 
                     <div class="backAndForth">
-                        <button class="exerButton" onclick="window.location.href='../ex-2'"><</button>
-                        <button class="exerButton" onclick="window.location.href='../ex-4'">></button>
+                        <button class="exerButton" onclick="window.location.href='../ex-3'"><</button>
+                        <!-- <button class="exerButton" onclick="window.location.href='../ex-4'">></button> -->
                     </div>
                 </div>
             </div>
