--- a/funko/funko-new.html
+++ b/funko/funko-new.html
@@ -12,7 +12,10 @@
         <div class="wrapper">
             <div class="container">
                 <div class="popFigure ui-draggable ui-draggable-handle">
-                    <img id="pop1" src="popFigures/img1.png" alt="">
+                    <div class="tooltip">
+                        <img id="pop1" src="popFigures/img1.png" alt="">
+                        <span class="tooltiptext">HELLOOO</span>
+                    </div>
                 </div>
 
                 <div class="popFigure ui-draggable ui-draggable-handle">
