--- a/funko/funko-new.html
+++ b/funko/funko-new.html
@@ -11,6 +11,13 @@
     <body class="funkoBody">
         <div class="wrapper">
             <div class="container">
+                <div class="funkoLogoHeader">
+                    <img src="" alt="">
+                    <img src="img/funko-logo.png" alt="funko logo">
+                    <img src="" alt="">
+                </div>
+                <img class="centerRow shelf" src="img/shelf.png" alt="">
+
                 <div class="popFigure ui-draggable ui-draggable-handle">
                     <div class="tooltip">
                         <img id="pop1" src="popFigures/img1.png" alt="">
