ex4 updates again

--- a/funko/funko-new.html
+++ b/funko/funko-new.html
@@ -13,10 +13,19 @@
             <div class="container">
                 <div class="funkoLogoHeader">
                     <img src="" alt="">
-                    <img src="img/funko-logo.png" alt="funko logo">
+                    <img src="img/funko-logo-2.png" alt="funko logo">
                     <img src="" alt="">
                 </div>
-                <img class="centerRow shelf" src="img/shelf.png" alt="">
+                <div class="centerRow">
+                    <img class="shelf" src="img/shelf-2.png" alt="">
+                </div>
+
+                <div class="shelves">
+                    <div class="centerRow"><img src="img/shelf-long.png" alt="" class="shelf"></div>
+                    <div class="centerRow"><img src="img/shelf-long.png" alt="" class="shelf"></div>
+                    <div class="centerRow"><img src="img/shelf-long.png" alt="" class="shelf"></div>
+                </div>
+                
 
                 <div class="popFigure ui-draggable ui-draggable-handle">
                     <div class="tooltip">
