ex4 slight updates

--- a/funko/funko-new.html
+++ b/funko/funko-new.html
@@ -13,7 +13,7 @@
             <div class="container">
                 <div class="funkoLogoHeader">
                     <img src="" alt="">
-                    <img src="img/funko-logo-updated.png" alt="funko logo">
+                    <img src="img/funko-logo-updated-2.png" alt="funko logo">
                     <img src="" alt="">
                 </div>
                 <div class="centerRow">
@@ -87,6 +87,11 @@
                         <div class="centerRow"><img src="img/shelf-long.png" alt="" class="shelf"></div>
                     </div>
                 </div>
+
+                <footer style="padding: 20px; margin-top: 100px;">
+                    <h3 class="centerRow">Gary Isufi & Heesoo Lee</h3>
+                    <p class="centerRow">This webpage is a dedication to our extending collection of Funko Pops, which will be used as wall art in the future.</p>
+                </footer>
             </div>
         </div>
     </body>
