--- a/funko/funko-new.html
+++ b/funko/funko-new.html
@@ -17,7 +17,7 @@
                     <img src="" alt="">
                 </div>
                 <div class="centerRow">
-                    <img class="shelf" src="img/shelf-2.png" alt="">
+                    <img class="shelf" src="img/shelf-2.png" alt="" style="box-shadow: 2px 5px 10px black;">
                 </div>
 
                 <div class="shelves">
@@ -42,7 +42,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="centerRow"><img src="img/shelf-long.png" alt="" class="shelf"></div>
+                        <div class="centerRow"><img src="img/shelf-long.png" alt="" class="shelf" id="shelf1"></div>
                     </div>
                     
                     <div class="shelfRow">
@@ -66,7 +66,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="centerRow"><img src="img/shelf-long.png" alt="" class="shelf"></div>
+                        <div class="centerRow"><img src="img/shelf-long.png" alt="" class="shelf" id="shelf2"></div>
                     </div>
                     
                     <div class="shelfRow">
@@ -84,7 +84,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="centerRow"><img src="img/shelf-long.png" alt="" class="shelf"></div>
+                        <div class="centerRow"><img src="img/shelf-long.png" alt="" class="shelf" id="shelf3"></div>
                     </div>
                 </div>
 
