ex4 updated colors a bit

--- a/funko/funko-new.html
+++ b/funko/funko-new.html
@@ -17,7 +17,7 @@
                     <img src="" alt="">
                 </div>
                 <div class="centerRow">
-                    <img class="shelf" src="img/shelf-2.png" alt="" style="box-shadow: 2px 5px 10px black;">
+                    <img class="shelf" src="img/shelf-2.png" alt="" style="box-shadow: 2px 5px 10px lightblue;">
                 </div>
 
                 <div class="shelves">
