--- a/contact/index.html
+++ b/contact/index.html
@@ -5,6 +5,9 @@
         <link rel="stylesheet" href="../style.css">
         <script src="../jquery.js"></script>
         <script src="main.js"></script>
+        <script src="../matter/matter.js" type="text/javascript"></script>
+        <!-- <script src="../matter/matter-wrap.js" type="text/javascript"></script> -->
+        <script src="../matter/sleeping.js" type="text/javascript"></script>
     </head>
     <body class="mainBody">
         <div class="wrapper">
@@ -32,7 +35,22 @@
                 </div>
 
                 <div class="content">
-                    <h1 class="centerRow">- - - Coming soon - - -</h1>
+                    <h1 class="centerRow">Contact Me</h1>
+
+                    <div class="emails">
+                        <div class="centerRow"><h2>Email</h2></div>
+
+                        <div class="centerRow"><button class="contactButton contactButtonEmail" onclick="window.open('mailto:garyisufi3@gmail.com','_blank')"><h2>garyisufi3@gmail.com</h2></button></div>
+                        <div class="centerRow"><button class="contactButton contactButtonEmail" onclick="window.open('mailto:isufi.2@buckeyemail.osu.edu','_blank')"><h2>isufi.2@buckeyemail.osu.edu</h2></button></div>
+                    </div>
+
+                    <div class="social" style="margin-top: 30px;">
+                        <div class="centerRow"><h2>Social Media</h2></div>
+
+                        <div class="centerRow"><button class="contactButton contactButtonLinkedIn" onclick="window.open('https://www.linkedin.com/in/gary-isufi-619a12175/','_blank')"><h2>LinkedIn</h2></button></div>
+                    </div>
+
+                    <div class="centerRow" id="matter-sleeping"></div>
                 </div>
             </div>
         </div>
