--- a/projects/index.html
+++ b/projects/index.html
@@ -5,6 +5,9 @@
         <link rel="stylesheet" href="../style.css">
         <script src="../jquery.js"></script>
         <script src="main.js"></script>
+        <script src="../matter/matter.js" type="text/javascript"></script>
+        <!-- <script src="../matter/matter-wrap.js" type="text/javascript"></script> -->
+        <script src="../matter/softBody.js" type="text/javascript"></script>
     </head>
     <body class="mainBody">
         <div class="wrapper">
@@ -32,7 +35,85 @@
                 </div>
 
                 <div class="content">
-                    <h1 class="centerRow">- - - Coming soon - - -</h1>
+                    <h1 class="centerRow">Projects and Activities</h1>
+
+                    <div class="projects">
+                        <div class="project">
+                            <div class="position">
+                                <p>Student Class Selection Helper (initiated at HackOHI/O 2018)</p>
+                            </div>
+                            <div class="details">
+                                <ul>
+                                    <li>Pioneered a project that helps students navigate their classes while scheduling in a timely manner</li>
+                                    <li>Researched algorithm efficiency with the Traveling Salesman Problem to shorten distance traveled during the day</li>
+                                    <li>Utilized the Google Maps API to handle route information between students' classes</li>
+                                    <li>Programming in JavaScript to create a user interface along with Python for the algorithm functionality in the backend</li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        <hr>
+
+                        <div class="project">
+                            <div class="position">
+                                <p>Vice President of Painting with Bob Ross Club</p>
+                            </div>
+                            <div class="details">
+                                <ul>
+                                    <li>Refined leadership and communication skills by establishing an inclusive atmosphere for painting and releasing stress</li>
+                                    <li>Incorporated HTML markup in WordPress to maintain the club's website with information for events</li>
+                                    <li>Assisted in the transition to online virtual events by introducing consistent Zoom e-board and event meetings</li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        <hr>
+
+                        <div class="project">
+                            <div class="position">
+                                <p>Super Mario Bros. Level 1-1 and Spider-Man 3902 Game</p>
+                            </div>
+                            <div class="details">
+                                <ul>
+                                    <li>Developed a working Mario level and a new Spider-Man crawling game using C#, Visual Studio, and Azure DevOps</li>
+                                    <li>Utilized the MonoGame API to handle sound effects, controller and keyboard input, music playback, and 2D scrolling</li>
+                                    <li>Structured each level using XML for level loading and the entire project using the Scrum Agile framework</li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        <hr>
+
+                        <div class="project">
+                            <div class="position">
+                                <p>HackOHI/O 2019 Hackathon</p>
+                            </div>
+                            <div class="details">
+                                <ul>
+                                    <li>Initiated a web app that outputs efficient running paths based on mileage requested from the user</li>
+                                    <li>Utilized the Google Maps API to search for roads based on intersection points within a close proximity of each other</li>
+                                    <li>Incorporated a criteria feature to narrow down running paths based on user preference of where they would like to run</li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        <hr>
+
+                        <div class="project">
+                            <div class="position">
+                                <p>JPMorgan Chase & Co. Code for Good 2019</p>
+                            </div>
+                            <div class="details">
+                                <ul>
+                                    <li>Constructed a web app that keeps track of user's debt and displays advice on paying it off effectively</li>
+                                    <li>Improved leadership and teamwork skills by following a combination of Scrum and Kanban Agile methodologies</li>
+                                    <li>Integrated the frontend with the backend using Flask and Python to keep track of customer information</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="centerRow" id="matter-softBody"></div>
                 </div>
             </div>
         </div>
