final project finished

--- a/contact/index.html
+++ b/contact/index.html
@@ -7,7 +7,7 @@
         <script src="main.js"></script>
         <script src="../matter/matter.js" type="text/javascript"></script>
         <!-- <script src="../matter/matter-wrap.js" type="text/javascript"></script> -->
-        <script src="../matter/sleeping.js" type="text/javascript"></script>
+        <script src="../matter/stats.js" type="text/javascript"></script>
     </head>
     <body class="mainBody">
         <div class="wrapper">
@@ -30,7 +30,7 @@
                         <ul><li><a href="../projects">PROJECTS</a></li></ul>
                         <ul><li><a href="../experiences">EXPERIENCES</a></li></ul>
                         <ul><li><a href="../art">ART</a></li></ul>
-                        <ul><li><a href="../contact" style="color: orange;">CONTACT</a></li></ul>
+                        <ul><li><a href="../contact" style="color: #152238;">CONTACT</a></li></ul>
                     </nav>
                 </div>
 
@@ -50,7 +50,7 @@
                         <div class="centerRow"><button class="contactButton contactButtonLinkedIn" onclick="window.open('https://www.linkedin.com/in/gary-isufi-619a12175/','_blank')"><h2>LinkedIn</h2></button></div>
                     </div>
 
-                    <div class="centerRow" id="matter-sleeping"></div>
+                    <div class="centerRow" id="matter-stats"></div>
                 </div>
             </div>
         </div>
