--- a/experiences/index.html
+++ b/experiences/index.html
@@ -28,7 +28,7 @@
                     <nav class="headerNav">
                         <ul><li><a href="../me">ME</a></li></ul>
                         <ul><li><a href="../projects">PROJECTS</a></li></ul>
-                        <ul><li><a href="../experiences" style="color: orange;">EXPERIENCES</a></li></ul>
+                        <ul><li><a href="../experiences" style="color: #152238;">EXPERIENCES</a></li></ul>
                         <ul><li><a href="../art">ART</a></li></ul>
                         <ul><li><a href="../contact">CONTACT</a></li></ul>
                     </nav>
@@ -69,10 +69,10 @@
                                 </div>
                                 <div class="details">
                                     <ul>
-                                        <li>- - - Coming soon - - -</li>
-                                        <li>- - - Coming soon - - -</li>
-                                        <li>- - - Coming soon - - -</li>
-                                        <li>- - - Coming soon - - -</li>
+                                        <li>- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</li>
+                                        <li>- - - - - - - - - - - - - - - - - - - - - - - - - - - Coming - - - - - - - - - - - - - - - - - - - - - - - - - - - - </li>
+                                        <li>- - - - - - - - - - - - - - - - - - - - - - - - - - - - Soon - - - - - - - - - - - - - - - - - - - - - - - - - - - - - </li>
+                                        <li>- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</li>
                                     </ul>
                                 </div>
                             </div>
