--- a/me/index.html
+++ b/me/index.html
@@ -5,6 +5,10 @@
         <link rel="stylesheet" href="../style.css">
         <script src="../jquery.js"></script>
         <script src="main.js"></script>
+        <script src="../matter/matter.js" type="text/javascript"></script>
+        <!-- <script src="../matter/matter-wrap.js" type="text/javascript"></script> -->
+        <!-- <script src="../matter/bridge.js" type="text/javascript"></script> -->
+        <script src="../matter/slingshot.js" type="text/javascript"></script>
     </head>
     <body class="mainBody">
         <div class="wrapper">
@@ -23,7 +27,7 @@
                 
                 <div class="topHeader">
                     <nav class="headerNav">
-                        <ul><li><a href="../me" style="color: orange;">ME</a></li></ul>
+                        <ul><li><a href="../me" style="color: #152238;">ME</a></li></ul>
                         <ul><li><a href="../projects">PROJECTS</a></li></ul>
                         <ul><li><a href="../experiences">EXPERIENCES</a></li></ul>
                         <ul><li><a href="../art">ART</a></li></ul>
@@ -32,7 +36,54 @@
                 </div>
 
                 <div class="content">
-                    <h1 class="centerRow">- - - Coming soon - - -</h1>
+                    <h1 class="centerRow">About Me</h1>
+
+                    <div class="education">
+                        <div class="centerRow"><h2>Education</h2></div>
+
+                        <div class="meBox">
+                            <div class="centerRow"><p style="font-weight: bold;">Bachelor of Science: Computer Science and Engineering</p></div>
+                            <div class="centerRow"><p>The Ohio State University</p></div>
+                        </div>
+                    </div>
+
+                    <div class="skills">
+                        <div class="centerRow"><h2>Skills</h2></div>
+
+                        <div class="meBox">
+                            <div class="centerRow">
+                                <ul>
+                                    <li>Java</li>
+                                    <li>Python</li>
+                                    <li>C</li>
+                                    <li>C#</li>
+                                    <li>Assembly</li>
+                                    <li>MATLAB</li>
+                                </ul>
+                                <ul>
+                                    <li>JavaScript</li>
+                                    <li>jQuery</li>
+                                    <li>ASP.NET</li>
+                                    <li>CSS</li>
+                                    <li>HTML</li>
+                                    <li>XML</li>
+                                </ul>
+                                <ul>
+                                    <li>Object Oriented Design</li>
+                                    <li>Visual Studio</li>
+                                    <li>Azure DevOps</li>
+                                    <li>Agile</li>
+                                    <li>Scrum</li>
+                                    <li>Kanban</li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        <div class="centerRow">
+                            <div id="matter-slingshot"></div>
+                        </div>
+
+                    </div>
                 </div>
             </div>
         </div>
