--- a/projects/index.html
+++ b/projects/index.html
@@ -27,7 +27,7 @@
                 <div class="topHeader">
                     <nav class="headerNav">
                         <ul><li><a href="../me">ME</a></li></ul>
-                        <ul><li><a href="../projects" style="color: orange;">PROJECTS</a></li></ul>
+                        <ul><li><a href="../projects" style="color: #152238;">PROJECTS</a></li></ul>
                         <ul><li><a href="../experiences">EXPERIENCES</a></li></ul>
                         <ul><li><a href="../art">ART</a></li></ul>
                         <ul><li><a href="../contact">CONTACT</a></li></ul>
