--- a/art/projects/proj-2.html
+++ b/art/projects/proj-2.html
@@ -25,7 +25,7 @@
                         <ul><li><a href="../../me">ME</a></li></ul>
                         <ul><li><a href="../../projects">PROJECTS</a></li></ul>
                         <ul><li><a href="../../experiences">EXPERIENCES</a></li></ul>
-                        <ul><li><a href="../../art" style="color: orange;">ART</a></li></ul>
+                        <ul><li><a href="../../art" style="color: #152238;">ART</a></li></ul>
                         <ul><li><a href="../../contact">CONTACT</a></li></ul>
                     </nav>
                 </div>
@@ -45,7 +45,7 @@
 
                         <br>
 
-                        <p class="centerRow">- - - Coming soon - - -</p>
+                        <p class="centerRow">Populated the ME, PROJECTS, EXPERIENCES, and CONTACT pages for this homepage, while including some interaction within these pages.</p>
                     </div>
 
                     <br>
