long overdue updates

--- a/art/exercises/ex-3/index.html
+++ b/art/exercises/ex-3/index.html
@@ -37,7 +37,7 @@
                         <button class="exerButton" onclick="window.location.href='../ex-1'"><h2>1</h2></button>
                         <button class="exerButton" onclick="window.location.href='../ex-2'"><h2>2</h2></button>
                         <button class="exerButton selectedExer" onclick="window.location.href='../ex-3'"><h2>3</h2></button>
-                        <button class="exerButton" onclick="window.location.href='../ex-4'"><h2>4</h2></button>
+                        <!-- <button class="exerButton" onclick="window.location.href='../ex-4'"><h2>4</h2></button> -->
                     </nav>
 
                     <br>
@@ -53,9 +53,13 @@
 
                     <br>
 
-                    <div class="backAndForth">
+                    <!-- <div class="backAndForth">
                         <button class="exerButton" onclick="window.location.href='../ex-2'"><</button>
                         <button class="exerButton" onclick="window.location.href='../ex-4'">></button>
+                    </div> -->
+
+                    <div class="backAndForth">
+                        <button class="exerButton" onclick="window.location.href='../ex-2'"><</button>
                     </div>
                 </div>
             </div>
