--- a/art/index.html
+++ b/art/index.html
@@ -43,8 +43,8 @@
                         <button class="catButton catButton2" onclick="window.location.href='exercises'"><h2>- EXERCISES -</h2></button>
                         <br>
                         <button class="catButton catButton3" onclick="window.location.href='projects'"><h2>- PROJECTS -</h2></button>
-                        <br>
-                        <button class="catButton catButton4" onclick="window.location.href='playground'"><h2>- PLAYGROUND -</h2></button>
+                        <!-- <br>
+                        <button class="catButton catButton4" onclick="window.location.href='playground'"><h2>- PLAYGROUND -</h2></button> -->
                     </div>
 
                     <br>
