--- a/experiences/index.html
+++ b/experiences/index.html
@@ -59,7 +59,7 @@
                                     <p>JPMorgan Chase & Co.</p>
                                 </div>
                                 <div class="dates">
-                                    <p>July 2021 - Future</p>
+                                    <p>July 2021 - Current</p>
                                 </div>
                             </div>
 
@@ -89,7 +89,7 @@
                                     <p>Tremco Incorporated</p>
                                 </div>
                                 <div class="dates">
-                                    <p>May 2020 - Current</p>
+                                    <p>May 2020 - April 2021</p>
                                 </div>
                             </div>
 
